--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,20 +12,24 @@
 
 <!--Comments that belong to the current Post-->
 <h2>Comments</h2>
-<div id='comments'>
-    <% @post.comments.each do |comment|%>  <!-- @post.comments returns array -->
-        <%= div_for comment do%>
+<div id='comments'>    
+    <%= render :partial => @post.comments.reverse %>
+    <!-- @post.comments returns array -->
+<!--
+   <% @post.comments.each do |comment|%>  
+     <%= div_for comment do%>
         <p>
             <strong>Posted <%= time_ago_in_words(comment.created_at)%></strong><br />
             <%= h(comment.body)%>
         </p>
        
         <%end%>
+        -->
     <%end%>
 </div>
 
-
-<%= form_for([@post, Comment.new]) do |f| %>
+<!--The text fields for adding new comments-->
+<%= form_for([@post, Comment.new], remote: true) do |f| %>
     <p><%= f.label :body, "New Comment" %> </br/>
         <%= f.text_area :body %>
     </p>
